# ResQoUnity

./: DIAGNOSTIC_GUIDE.md  DRONE_CALIBRATION_GUIDE.md  DRONE_COMPREHENSIVE_LOGGING.md  DRONE_IMPLEMENTATION_COMPLETE.md  DRONE_README.md  DRONE_SLAM_GUIDE.md  DRONE_SPAWN_ANALYSIS.md  FIX_INDENT_NOW.txt  FORCE_BASED_CONTROL_IMPLEMENTATION.md  HYBRID_PHYSICS_CONTROL.md  IMPLEMENTATION_SUMMARY.md  MIXED_ROBOTS_GUIDE.md  MOTOR_CONTROL_GUIDE.md  PRODUCTION_BUG_FIX.md  SENIOR_ENGINEER_REVIEW_FIXES.md  SOLUTION_OPTIONS_ANALYSIS.md  SUCCESS_SUMMARY.md  VIEWPORT_FREEZE_RESEARCH_PROMPT.md  _isaac_sim  agent_cfg.py  calibrate_drone_physics.py  calibration_data.json  calibration_test_plan.json  custom_rl_env.py  diagnose_drone_physics.py  drone_controller.py  drone_debug_logger.py  fix_all_indentation.sh  fix_isaaclab_nucleus.py  logs.md  my_changes.patch  omnigraph.py  omniverse_sim.py  omniverse_sim.py.bak2  omniverse_sim.py.bak3  patch_isaaclab_nucleus.sh  ros2.py  ros2_bridge.py  run_sim.sh  run_sim_drone.sh  (+14 more)
go2_omniverse_ws/src/go2_interfaces/: CMakeLists.txt
go2_omniverse_ws/src/go2_interfaces/msg/: DroneState.msg
go2_omniverse_ws/src/go2_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
go2_omniverse_ws/src/go2_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
go2_omniverse_ws/src/go2_navigation/launch/: drone_slam_launch.py  full_navigation_launch.py  navigation_launch.py  slam_launch.py
robots/: __init__.py
robots/g1/: __init__.py
robots/quadcopter/: __init__.py  config.py
